# plaster

./: .gitignore  CMakeLists.txt  README.md  build.bat
assets/shaders/: cube.frag  cube.vert  fullscreen.vert  post_dither.frag  sprite.frag  sprite.vert
docs/: PLASTIBOO_STYLE.md
include/Core/: Application.h  FileSystem.h  KeyCodes.h  Window.h
include/Graphics/: CameraMatrices.h  CubeRenderer.h  FogParams.h  GridMap.h  MapRenderer.h  PostProcessor.h  Renderer.h  SpriteRenderer.h
include/Graphics/Vulkan/: VulkanUtils.h
include/Scene/3D/Components/: camera.hpp  components.hpp  first-person-camera.hpp  identity.hpp  render.hpp  transform.hpp
include/Scene/3D/Core/: entity.hpp  scene.hpp
include/Scene/3D/Systems/: camera-system.hpp  first-person-camera-system.hpp  render-system.hpp  transform-system.hpp
src/: main.cpp
src/Core/: Application.cpp  FileSystem.cpp  Input.cpp  Window.cpp
src/Graphics/: CubeRenderer.cpp  GridMap.cpp  MapRenderer.cpp  PostProcessor.cpp  Renderer.cpp  SpriteRenderer.cpp
src/Graphics/UI/: ImGuiManager.cpp
src/Graphics/Vulkan/: VulkanContext.cpp  VulkanUtils.cpp
src/Scene/3D/Core/: entity.cpp  scene.cpp
src/Scene/3D/Systems/: camera-system.cpp  first-person-camera-system.cpp  render-system.cpp  transform-system.cpp
